<resources>
    <string name="app_name">BookExchage</string>
    <string name="注册">注册</string>
    <string name="登录">登录</string>
    <string name="用户名">用户名</string>
    <string name="密码">密码</string>
    <string name="下次自动登录">下次自动登录</string>
    <string-array name="地区">
        <item>地区</item>
    </string-array>
    <string-array name="学校">
        <item>学校</item>
    </string-array>
    <string-array name="出版社">
        <item>出版社</item>
    </string-array>
</resources>
