<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:describe="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">
    <com.example.jinx.bookexchage.DescribeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        describe:text="@string/用户名"
        describe:textsize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/signup_username"
        />
    <com.example.jinx.bookexchage.DescribeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        describe:text="@string/密码"
        describe:textsize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/signup_password"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/注册"
            android:id="@+id/signup_signup_bt"/>
    </LinearLayout>

</LinearLayout>
